--- a/css/style.less
+++ b/css/style.less
@@ -1,9 +1,7 @@
 @font-face {
 	font-family: "Alfred Regular";
-	src: url("https://saberhosneydev.github.io/nobel/fonts/alfredsans-regular-webfont.woff2")
-			format("woff2"),
-		url("https://saberhosneydev.github.io/nobel/fonts/alfredsans-regular-webfont.woff")
-			format("woff");
+	src: url("../fonts/alfredsans-regular-webfont.woff2") format("woff2"),
+		url("../fonts/alfredsans-regular-webfont.woff") format("woff");
 }
 body {
 	font-family: "Alfred Regular";
